[gd_scene load_steps=14 format=3 uid="uid://cmugoubnjxiu3"]

[ext_resource type="Script" uid="uid://frybfl02g8cs" path="res://scripts/CoverFlow.gd" id="1"]
[ext_resource type="Shader" uid="uid://dnp31fktax2eu" path="res://shaders/background.gdshader" id="2_1pbjt"]
[ext_resource type="Script" uid="uid://cnpic13544agl" path="res://scripts/add_button.gd" id="3_1pbjt"]
[ext_resource type="Texture2D" uid="uid://gadfduqeq3ed" path="res://assets/icons/plus.svg" id="3_fobrs"]
[ext_resource type="Texture2D" uid="uid://bdpbjpmiqf5yn" path="res://assets/kenney_input-prompts_1.4/Keyboard & Mouse/Default/keyboard.png" id="5_03102"]
[ext_resource type="Texture2D" uid="uid://d2pi03grutlfd" path="res://assets/kenney_input-prompts_1.4/Xbox Series/Double/xbox_button_menu_outline.png" id="5_k3nbs"]
[ext_resource type="Texture2D" uid="uid://biwdoaj2uat3f" path="res://assets/kenney_input-prompts_1.4/Keyboard & Mouse/Default/keyboard_enter.png" id="6_6hi8n"]
[ext_resource type="Texture2D" uid="uid://dlxhgg7unex3f" path="res://assets/kenney_input-prompts_1.4/Xbox Series/Double/xbox_button_color_a.png" id="6_yspgm"]
[ext_resource type="Texture2D" uid="uid://cch3fg5ra3dgu" path="res://assets/kenney_input-prompts_1.4/Keyboard & Mouse/Default/keyboard_arrows_horizontal.png" id="7_8dok0"]
[ext_resource type="Texture2D" uid="uid://c6p1xu0ee11m" path="res://assets/kenney_input-prompts_1.4/Xbox Series/Double/xbox_dpad_horizontal.png" id="7_03102"]
[ext_resource type="Texture2D" uid="uid://sqgrucqfcdiq" path="res://assets/kenney_input-prompts_1.4/Xbox Series/Double/controller_xboxseries.png" id="8_yspgm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1pbjt"]
shader = ExtResource("2_1pbjt")
shader_parameter/polar_coordinates = false
shader_parameter/polar_center = Vector2(0.5, 0.5)
shader_parameter/polar_zoom = 1.0
shader_parameter/polar_repeat = 3.0
shader_parameter/spin_rotation = 2.0
shader_parameter/spin_speed = 7.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(0.870588, 0.266667, 0.231373, 1)
shader_parameter/colour_2 = Color(0, 0.419608, 0.705882, 1)
shader_parameter/colour_3 = Color(0.0862745, 0.137255, 0.145098, 1)
shader_parameter/contrast = 3.5
shader_parameter/lighting = 0.3
shader_parameter/spin_amount = 0.2
shader_parameter/pixel_filter = 740.0

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.513233, 0.513233, 0.513233, 1)
background_energy_multiplier = 0.5
ambient_light_source = 2
ambient_light_color = Color(0.513726, 0.513726, 0.513726, 1)
ambient_light_energy = 2.0

[node name="CoverFlow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.8
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="CanvasLayer" type="CanvasLayer" parent="ViewportContainer"]
layer = -1

[node name="Control" type="Control" parent="ViewportContainer/CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="background" type="ColorRect" parent="ViewportContainer/CanvasLayer/Control"]
modulate = Color(0.641934, 0.641934, 0.641934, 1)
material = SubResource("ShaderMaterial_1pbjt")
layout_mode = 1
anchors_preset = -1
anchor_right = 48.0
anchor_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="ViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="ViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.99944, 0.0334694, 0, -0.0334694, 0.99944, 0, 2.47958, 8.07705)
fov = 60.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="ViewportContainer/SubViewport"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 4, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="ViewportContainer/SubViewport"]
environment = SubResource("Environment_1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 891.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="GameTitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -167.0
offset_right = 200.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Crimson Konsole"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Keyboard" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Keyboard"]
layout_mode = 0
offset_left = 1772.0
offset_top = 40.0
offset_right = 1804.0
offset_bottom = 72.0
scale = Vector2(2.78479, 2.78479)
icon = ExtResource("3_fobrs")
script = ExtResource("3_1pbjt")

[node name="LeftButton" type="Button" parent="Keyboard"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 495.0
offset_right = 70.0
offset_bottom = 545.0
grow_vertical = 2
text = "<"

[node name="RightButton" type="Button" parent="Keyboard"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1810.0
offset_top = 495.0
offset_right = 1860.0
offset_bottom = 545.0
grow_horizontal = 0
grow_vertical = 2
text = ">"

[node name="Controller" type="Control" parent="Keyboard"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Icon" type="TextureRect" parent="Keyboard/Controller"]
offset_left = 68.0
offset_top = 932.0
offset_right = 548.0
offset_bottom = 1412.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_03102")

[node name="KeyboardInstruct2" type="Label" parent="Keyboard/Controller"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 180.0
offset_top = 936.0
offset_right = 481.0
offset_bottom = 970.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Подключена клавиатура"
horizontal_alignment = 1

[node name="Instruction" type="Control" parent="Keyboard"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GamepadInstrcut1" type="Label" parent="Keyboard/Instruction"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1066.0
offset_top = 968.0
offset_right = 1181.0
offset_bottom = 1002.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Запуск"
horizontal_alignment = 1

[node name="Gamepad1" type="TextureRect" parent="Keyboard/Instruction"]
offset_left = 995.0
offset_top = 988.0
offset_right = 1475.0
offset_bottom = 1468.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_6hi8n")

[node name="GamepadInstrcut2" type="Label" parent="Keyboard/Instruction"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 844.0
offset_top = 968.0
offset_right = 977.0
offset_bottom = 1002.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Навигация"
horizontal_alignment = 1

[node name="Gamepad3" type="TextureRect" parent="Keyboard/Instruction"]
offset_left = 759.0
offset_top = 988.0
offset_right = 1239.0
offset_bottom = 1468.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_8dok0")

[node name="Gamepad" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Instruction" type="Control" parent="Gamepad"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Zapusk" type="Control" parent="Gamepad/Instruction"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GamepadInstrcut1" type="Label" parent="Gamepad/Instruction/Zapusk"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1066.0
offset_top = 968.0
offset_right = 1181.0
offset_bottom = 1002.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Запуск"
horizontal_alignment = 1

[node name="Gamepad1" type="TextureRect" parent="Gamepad/Instruction/Zapusk"]
layout_mode = 0
offset_left = 995.0
offset_top = 988.0
offset_right = 1475.0
offset_bottom = 1468.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_yspgm")

[node name="Navigation" type="Control" parent="Gamepad/Instruction"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GamepadInstrcut2" type="Label" parent="Gamepad/Instruction/Navigation"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 844.0
offset_top = 968.0
offset_right = 977.0
offset_bottom = 1002.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Навигация"
horizontal_alignment = 1

[node name="Gamepad3" type="TextureRect" parent="Gamepad/Instruction/Navigation"]
layout_mode = 0
offset_left = 759.0
offset_top = 988.0
offset_right = 1239.0
offset_bottom = 1468.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_03102")

[node name="Add" type="Control" parent="Gamepad"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Gamepad/Add"]
layout_mode = 0
offset_left = 1768.0
offset_top = 36.0
offset_right = 1866.0
offset_bottom = 132.0

[node name="Gamepad2" type="TextureRect" parent="Gamepad/Add"]
layout_mode = 0
offset_left = 1768.0
offset_top = 35.0
offset_right = 2248.0
offset_bottom = 525.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_k3nbs")

[node name="Controller" type="Control" parent="Gamepad"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Icon" type="TextureRect" parent="Gamepad/Controller"]
offset_left = 68.0
offset_top = 948.0
offset_right = 548.0
offset_bottom = 1428.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_yspgm")

[node name="IconInstruct" type="Label" parent="Gamepad/Controller"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 180.0
offset_top = 936.0
offset_right = 313.0
offset_bottom = 970.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Подключен контроллер"
horizontal_alignment = 1

[connection signal="pressed" from="Keyboard/Button" to="Keyboard/Button" method="_on_pressed"]
